--- a/app/views/speakers/_form.html.erb
+++ b/app/views/speakers/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_field :display_order %>
   </div>
   <div class="field">
+    <%= f.label :visible %><br />
+    <%= f.check_box :visible %>
+  </div>
+  <div class="field">
     <%= f.label :bio %><br />
     <%= f.text_area :bio %>
   </div>
