--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -11,7 +11,7 @@
   .span7
     %h3 Introduction
     .by Dr Wai Keong Wong
-    .description Welcome and introduction to the day
+    .description Welcome and Introduction to the day
 
 .event.row
   .span1 09:35-09:45
@@ -37,23 +37,44 @@
 .event.row
   .span1 11:00-11:45
   .span7
-    %h3 Session 1 - Streams as followed
+    %h3 Parallel Streams - Session 1
     %ul
       %li
-        %h4 Research and Collaboration
-        %p e.g. alternatives to email and word .doc collaboration. The basics of version control. Introduction to R statistics
+        %em Research and Collaboration Stream 
+        %h4 Software for Collaboration 
+        .by Nish
+        %p Replacing reply-all emails and commented word documents
       %li
-        %h4 Education and Learning
-        %p e.g. eportfolios, using social media as a doctor,
-        %p
+        %em Education and Learning Stream
+        %h4 How to use technology when teaching - flipping the classroom 1
+        .by Anne-Marie
+        %p how to find, mashup, collate and share the best resources with your learners in advance of your teaching session
       %li
-        %h4 Digital Minimalism - Taming mind and machine 
-        %p e.g. Inbox zero, Getting Things Done, managing data overload (RSS/Read Tt Later), paperless workflows
+        %em Digital Minimalism - Taming mind and machine 
+        %h4 Inbox Zero and Getting Things Done
+        .by Stevan and Ed
+        %p Getting more productive and less stressed simply by changing the way you work
 
 .event.row
   .span1 12:00-12:45
   .span7
-    %h3 Session 2 - Streams as above
+    %h3 Parallel Streams - Session 2
+        %ul
+      %li
+        %em Research and Collaboration Stream 
+        %h4 TBC
+        .by Nish and Stevan
+        %p 
+      %li
+        %em Education and Learning Stream
+        %h4 How to use technology when teaching - flipping the classroom 2
+        .by Anne-Marie
+        %p how to use technology in your teaching session to increase interactivity
+      %li
+        %em Digital Minimalism - Taming mind and machine 
+        %h4 Getting the most out of your iPhone/iPad
+        .by Ed
+        %p Apps, what's great, useful or just plain fun? You also get an opportunity to share your helpful apps!
 
 .event.row
   .span1 12:45:13:45
@@ -63,21 +84,43 @@
 .event.row
   .span1 13:45-14:30
   .span7
-    %h3 Debate/ Discussion: The future of publishing: Is this the end for medical journals? What's their relevance in the era of the internet? TBC
-    .by Speaker TBA
+    %h3 The future of publishing: Is this the end for medical journals?
+    .by Matthew Bultitude
+    %p Associate Editor for BJU International and Consultant Urologist
+    .description Matt discusses the direction that BJUI are taking to re-invent themselves for the internet age and how they are harnessing using new avenues such as social media to better connect with their readers 
 
 .event.row
   .span1 14:45-15:30
   .span7
-    %h3 Session 3 - Streams as above
+    %h3 Parallel Streams - Session 3
+        %ul
+      %li
+        %em Research and Collaboration Stream 
+        %h4 Programming and statistics? Meet R 
+        .by Stevan
+        %p A brief overview of the R language and how it can help you process data and answer questions
+      %li
+        %em Education and Learning Stream
+        %h4 Using social media (SoMe) for continual professional development- what's in it for me? 
+        .by Elaine Leung 
+        %p %em NIHR/NHS Academic Clinical Fellow (Women’s Health), BJOG Associate (Journal Club co-ordinator)
+        %p Continual professional development (CPD) is an integral part of our jobs. In this session, we will explore some of the controversies about the use of SoMe by health professionals and how some have been using SoMe for CPD
+      %li
+        %em Digital Minimalism - Taming mind and machine 
+        %h4 Managing the data overload
+        .by Ed and Wai Keong
+        %p Using RSS Feeds and Read-it-later services (Pocket/ Instapaper) to keep up to date with 100s of journals, news channels, links from twitter daily and still maintain your sanity
+
 
 .event.row
-  .span1 15:30-16:15
-  .span7
-    %h3 Session 4 - Streams as above
+  .span1 15:30-16:30
+  .span7     
+    %h3 Panel Discussion - How technology can change patient care?
+    .by Chaired by Anne-Marie 
+    .description Anne-Marie will be joined by clinicians, non-clinicians and patients as we explore how technology is changing to face of patient care
 
 .event.row
-  .span1 16:15-17:00
+  .span1 16:30-17:00
   .span7
     %h3 Drinks and Networking
 
@@ -104,6 +147,7 @@
   .span7
     %h3 7 deadly sins of tech
     .by Mr Rob Dyke
+    %p Advocate and practitioner of openness in health IT. (Product Development Manager of Tactix4, Co-founder of HANDIHealth CIC) 
 
 .event.row
   .span1 10:30-10:45
@@ -115,7 +159,7 @@
   .span7
     %h3 Anatomy and Physiology of NHS IT
     .by Dr Wai Keong Wong
-    .description Learn about how the discharge letter you type reaches the GP. How information flows in the NHS. Why it is so hard for IT systems to talk to each other. Equip yourself with the right vocabulatory and knowledge (Spine/ N3/ Caldicott) detect BS.
+    .description Learn about how the discharge letter you type reaches the GP. How information flows in the NHS. Why it is so hard for IT systems to talk to each other. Equip yourself with the right vocabulatory and knowledge (Spine/ N3/ Caldicott) to detect BS.
 
 .event.row
   .span1 11:45-12:30
@@ -129,6 +173,7 @@
       %li
         %h4 How a website actually works
         .by Dr Stevan Wing
+        .description A brief look at what webpages are made up of. Stevan will explain how html, css and javascript make up a modern webpage and how these are served
       %li
         %h4 Should you learn to code? If so, how do you do it?
         .by Dr Ed Wallitt
@@ -147,21 +192,35 @@
     .description Presenting your idea in a way that software developers (and investors!) can understand
 
 .event.row
-  .span1 14:30-16:00
+  .span1 14:15-14:45
   .span7
-    %h3 Session 2 - In the real world
-    %h4 45 minutes - Success stories
-    .by Chaired by Dr Stevan Wing and Dr Ed Wallitt
+    %h3 Co-creating Health Apps (with patients and service users)
+    .by Annabelle Davis (@DancingFlame_90) 
+      %em Designer and Project Manager at Cernis Limited and YoungMinds 
+    .by Sarah Amani (@S_Amani) 
+      %em Chief Clinical Information Officer at Surrey & Borders Partnership NHS Foundation Trust
+    .description Sarah and Annabelle will share 2 projects which have been developed for young people in health services. Both projects have used the principles of co-creation to involve the target group in the design and creation of the apps. The session will include a brief overview of co-creation as a principle as well as short videos of young people involved in the projects.
 
-    %h4 45 minutes - Ideas Factory
-    .by Various chairs (TBA)
+.event.row
+  .span1 14:45-15:00
+  .span7
+    %h3 Tea/ Coffee
+
+.event.row
+  .span1 15:00-16:00
+  .span7
+    %h3 Ideas Factory
+    .description Interactive sessions everyone gets to take part in coming up with ideas for apps
     %ul
       %li
-        %h4 Doctor Productivity
+        %h4 Apps for Doctor Productivity
+        .by Ed and Stevan
       %li
-        %h4 Educational
+        %h4 Apps for Teaching and Education
+        .by Anne-Marie
       %li
-        %h4 Patient-centric
+        %h4 Apps for Patients
+        .by Wai Keong and Sarah Amani
 
 .event.row
   .span1 16:00-17:00
