fix type on schedule page

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -103,7 +103,8 @@
         %em Education and Learning Stream
         %h4 Using social media (SoMe) for continual professional development- what's in it for me? 
         .by Elaine Leung 
-        %p %em NIHR/NHS Academic Clinical Fellow (Women’s Health), BJOG Associate (Journal Club co-ordinator)
+        %p 
+        %em NIHR/NHS Academic Clinical Fellow (Women’s Health), BJOG Associate (Journal Club co-ordinator)
         %p Continual professional development (CPD) is an integral part of our jobs. In this session, we will explore some of the controversies about the use of SoMe by health professionals and how some have been using SoMe for CPD
       %li
         %em Digital Minimalism - Taming mind and machine 
