Anne Marie's Changes to Panel

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -116,9 +116,9 @@
 .event.row
   .span1 15:30-16:30
   .span7     
-    %h3 Panel Discussion - How technology can change patient care?
+    %h3 Panel Discussion - What do patients and carers want from technology in healthcare??
     .by Chaired by Anne-Marie 
-    .description Anne-Marie will be joined by clinicians, non-clinicians and patients as we explore how technology is changing to face of patient care
+    .description Anne-Marie will be joined by patients, carers and those who have worked to develop solutions with them
 
 .event.row
   .span1 16:30-17:00
