Amended Annabelles Job Desc

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -197,7 +197,7 @@
   .span7
     %h3 Co-creating Health Apps (with patients and service users)
     .by Annabelle Davis (@DancingFlame_90) 
-    %em Designer and Project Manager at Cernis Limited and YoungMinds 
+    %em Designer and Project Manager at Cernis Limited 
     .by Sarah Amani (@S_Amani) 
     %em Chief Clinical Information Officer at Surrey & Borders Partnership NHS Foundation Trust
     .description Sarah and Annabelle will share 2 projects which have been developed for young people in health services. Both projects have used the principles of co-creation to involve the target group in the design and creation of the apps. The session will include a brief overview of co-creation as a principle as well as short videos of young people involved in the projects.
