add francis namouk session to schedule

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -17,7 +17,7 @@
   .span1 09:35-09:45
   .span7
     %h3 From a Doctor to Startup Founder to Health IT Executive
-    .by Dr Justin Whatling 
+    .by Dr Justin Whatling
     %p Chair, BCS Health
     .description Justin's support has made this event possible. Here he will share his journey from being a senior house office in neurology to senior director of strategic consulting in a multinational Health IT company.
 
@@ -27,7 +27,7 @@
     %h3 Plenary: Harnessing the Power of Technology and the Internet to Strengthen Relationships with Patients
     .by Dr Martin Murphy
     %p Clinical Director at NHS Wales Information Service
-    .description Martin challenges us to redefine our relationship with our patients in a new era where clinical information will be in control of patients and access to healthcare professionals can be as easy as a click away. How can we do all this safely in the light of the Snowden revelations? 
+    .description Martin challenges us to redefine our relationship with our patients in a new era where clinical information will be in control of patients and access to healthcare professionals can be as easy as a click away. How can we do all this safely in the light of the Snowden revelations?
 
 .event.row
   .span1 10:30-11:00
@@ -40,8 +40,8 @@
     %h3 Parallel Streams - Session 1
     %ul
       %li
-        %em Research and Collaboration Stream 
-        %h4 Software for Collaboration 
+        %em Research and Collaboration Stream
+        %h4 Software for Collaboration
         .by Nish
         %p Replacing reply-all emails and commented word documents
       %li
@@ -50,7 +50,7 @@
         .by Anne-Marie
         %p how to find, mashup, collate and share the best resources with your learners in advance of your teaching session
       %li
-        %em Digital Minimalism - Taming mind and machine 
+        %em Digital Minimalism - Taming mind and machine
         %h4 Inbox Zero and Getting Things Done
         .by Stevan and Ed
         %p Getting more productive and less stressed simply by changing the way you work
@@ -61,20 +61,20 @@
     %h3 Parallel Streams - Session 2
     %ul
       %li
-        %em Research and Collaboration Stream 
+        %em Research and Collaboration Stream
         %h4 TBC
         .by Nish and Stevan
-        %p 
+        %p
       %li
         %em Education and Learning Stream
         %h4 How to use technology when teaching - flipping the classroom 2
         .by Anne-Marie
         %p how to use technology in your teaching session to increase interactivity
       %li
-        %em Digital Minimalism - Taming mind and machine 
-        %h4 Getting the most out of your iPhone/iPad
-        .by Ed
-        %p Apps, what's great, useful or just plain fun? You also get an opportunity to share your helpful apps!
+        %em
+        %h4 Using video for collaboration with patients
+        .by Francis Namouk - Chief Executive at Streaming Well, a healthcare focused digital video production company, specialising in social distribution and content syndication.
+        %p Francis will share case studies demonstrating the impact of successful collaboration between Pharma, patients and patient groups. These case studies will demonstrate how video is a powerful medium that leads to patient empowerment, adherence, and compliance.
 
 .event.row
   .span1 12:45:13:45
@@ -87,7 +87,7 @@
     %h3 The future of publishing: Is this the end for medical journals?
     .by Matthew Bultitude
     %p Associate Editor for BJU International and Consultant Urologist
-    .description Matt discusses the direction that BJUI are taking to re-invent themselves for the internet age and how they are harnessing using new avenues such as social media to better connect with their readers 
+    .description Matt discusses the direction that BJUI are taking to re-invent themselves for the internet age and how they are harnessing using new avenues such as social media to better connect with their readers
 
 .event.row
   .span1 14:45-15:30
@@ -95,19 +95,19 @@
     %h3 Parallel Streams - Session 3
     %ul
       %li
-        %em Research and Collaboration Stream 
-        %h4 Programming and statistics? Meet R 
+        %em Research and Collaboration Stream
+        %h4 Programming and statistics? Meet R
         .by Stevan
         %p A brief overview of the R language and how it can help you process data and answer questions
       %li
         %em Education and Learning Stream
-        %h4 Using social media (SoMe) for continual professional development- what's in it for me? 
-        .by Elaine Leung 
-        %p 
+        %h4 Using social media (SoMe) for continual professional development- what's in it for me?
+        .by Elaine Leung
+        %p
         %em NIHR/NHS Academic Clinical Fellow (Women’s Health), BJOG Associate (Journal Club co-ordinator)
         %p Continual professional development (CPD) is an integral part of our jobs. In this session, we will explore some of the controversies about the use of SoMe by health professionals and how some have been using SoMe for CPD
       %li
-        %em Digital Minimalism - Taming mind and machine 
+        %em Digital Minimalism - Taming mind and machine
         %h4 Managing the data overload
         .by Ed and Wai Keong
         %p Using RSS Feeds and Read-it-later services (Pocket/ Instapaper) to keep up to date with 100s of journals, news channels, links from twitter daily and still maintain your sanity
@@ -115,9 +115,9 @@
 
 .event.row
   .span1 15:30-16:30
-  .span7     
+  .span7
     %h3 Panel Discussion - What do patients and carers want from technology in healthcare??
-    .by Chaired by Anne-Marie 
+    .by Chaired by Anne-Marie
     .description Anne-Marie will be joined by patients, carers and those who have worked to develop solutions with them
 
 .event.row
@@ -148,7 +148,7 @@
   .span7
     %h3 7 deadly sins of tech
     .by Mr Rob Dyke
-    %p Advocate and practitioner of openness in health IT. (Product Development Manager of Tactix4, Co-founder of HANDIHealth CIC) 
+    %p Advocate and practitioner of openness in health IT. (Product Development Manager of Tactix4, Co-founder of HANDIHealth CIC)
 
 .event.row
   .span1 10:30-10:45
@@ -196,9 +196,9 @@
   .span1 14:15-14:45
   .span7
     %h3 Co-creating Health Apps (with patients and service users)
-    .by Annabelle Davis (@DancingFlame_90) 
-    %em Designer and Project Manager at Cernis Limited 
-    .by Sarah Amani (@S_Amani) 
+    .by Annabelle Davis (@DancingFlame_90)
+    %em Designer and Project Manager at Cernis Limited
+    .by Sarah Amani (@S_Amani)
     %em Chief Clinical Information Officer at Surrey & Borders Partnership NHS Foundation Trust
     .description Sarah and Annabelle will share 2 projects which have been developed for young people in health services. Both projects have used the principles of co-creation to involve the target group in the design and creation of the apps. The session will include a brief overview of co-creation as a principle as well as short videos of young people involved in the projects.
 
