Typos/ Grammatical Corrections/ Re-ordering of Research and Collaboration stream

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -40,11 +40,6 @@
     %h3 Parallel Streams - Session 1
     %ul
       %li
-        %em Research and Collaboration Stream
-        %h4 Software for Collaboration
-        .by Nish
-        %p Replacing reply-all emails and commented word documents
-      %li
         %em Education and Learning Stream
         %h4 How to use technology when teaching - flipping the classroom 1
         .by Anne-Marie
@@ -62,9 +57,9 @@
     %ul
       %li
         %em Research and Collaboration Stream
-        %h4 TBC
-        .by Nish and Stevan
-        %p
+        %h4 Software for Collaboration
+        .by Nish
+        %p Replacing reply-all emails and commented word documents
       %li
         %em Education and Learning Stream
         %h4 How to use technology when teaching - flipping the classroom 2
@@ -87,7 +82,7 @@
     %h3 The future of publishing: Is this the end for medical journals?
     .by Matthew Bultitude
     %p Associate Editor for BJU International and Consultant Urologist
-    .description Matt discusses the direction that BJUI are taking to re-invent themselves for the internet age and how they are harnessing using new avenues such as social media to better connect with their readers
+    .description Matt discusses the direction that BJUI are taking to re-invent themselves for the internet age and how they are using new avenues such as social media to better connect with their readers
 
 .event.row
   .span1 14:45-15:30
@@ -211,7 +206,7 @@
   .span1 15:00-16:00
   .span7
     %h3 Ideas Factory
-    .description Interactive sessions everyone gets to take part in coming up with ideas for apps
+    .description Interactive sessions where everyone gets to come up with ideas for apps
     %ul
       %li
         %h4 Apps for Doctor Productivity
@@ -227,7 +222,7 @@
   .span1 16:00-17:00
   .span7
     %h3 Idea Factory Discussion (presentation of one idea from each group)
-    .by A chaired panel discussion to explore generated ideas and how they could be built and implemented.
+    .by A chaired panel discussion to explore ideas generated from the ideas factory and how they could be built and implemented.
 
 
 .event.row
