End of Conference Update
Links to Vimeo and #digidoc13 hashtag in Main Page and Footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,7 +5,7 @@
                 %h3 Quick links
                 %ul
                     %li= link_to "Home", "/"
-                    %li=link_to "Book a place", "http://digidoc13.eventbrite.co.uk/"
+                    %li=link_to "Catch up on DigiDoc13", "https://vimeo.com/channels/digidoc13"
                     %li= link_to "The Podcast", podcasts_path
 
             .span4
