--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -8,19 +8,22 @@
       %i Mastering Personal IT, to Revolutionising NHS IT
     
     %h2.lead
-      Join us for #digidoc13 on the 9th and 10th of November
-      
+      Sorry you missed the conference. Catch up on what happened at our 
+      %a {:href => 'https://vimeo.com/channels/digidoc13'}>Vimeo Channel
+
+    %h2.lead
+      You can also follow all the discussions by searching for  
+      %a {:href => 'https://twitter.com/search?q=%23digidoc13&src=hash'}>#digidoc13
+      on twitter
+
   .span4
     %p.ac
       %a{class: "btn btn-large btn-primary", 
-         href: "http://digidoc13.eventbrite.co.uk", 
-         title: "The Digital Doctor Conference 2013: Eventbrite page",
+         href: "https://vimeo.com/channels/digidoc13", 
+         title: "The Digital Doctor Conference 2013: Vimeo Channel",
          } 
-        %b Book now! 
-    %p
-      Medical students go 
-      %b free 
-      if you refer two friends
+        %b Watch videos here! 
+
 .row
   .span3
     = link_to(image_tag("bcs_alpha.jpg", 
